--- a/action.yaml
+++ b/action.yaml
@@ -62,19 +62,24 @@ runs:
       id: calculate_cli_parameters
       run: |
         if [ -n "${{ inputs.model_name }}" ]; then
-          echo "model_name=--model-name=${{ inputs.model_name }}" >> $GITHUB_ENV
+          echo "MODEL_NAME=--model-name=${{ inputs.model_name }}" >> $GITHUB_ENV
         else
-          echo "model_name=" >> $GITHUB_ENV
+          echo "MODEL_NAME=" >> $GITHUB_ENV
         fi
         if [ -n "${{ inputs.model_version }}" ]; then
-          echo "model_version=--model-version=${{ inputs.model_version }}" >> $GITHUB_ENV
+          echo "MODEL_VERSION=--model-version=${{ inputs.model_version }}" >> $GITHUB_ENV
         else
-          echo "model_version=" >> $GITHUB_ENV
+          echo "MODEL_VERSION=" >> $GITHUB_ENV
         fi
         if [ -z "${{ inputs.sarif_file }}" ]; then
-          echo "sarif_file=--output=$SARIF_FILE" >> $GITHUB_ENV
+          echo "SARIF_FILE=--output=$SARIF_FILE" >> $GITHUB_ENV
         else
-          echo "sarif_file=--output=result.sarif" >> $GITHUB_ENV
+          echo "SARIF_FILE=--output=result.sarif" >> $GITHUB_ENV
+        fi
+        if [ -z "${{ inputs.output_file }}" ]; then
+          echo "OUTPUT_FILE=--output=$OUTPUT_FILE" >> $GITHUB_ENV
+        else
+          echo "OUTPUT_FILE=${{ runner.temp }}/output.sarif" >> $GITHUB_ENV
         fi
       
     - name: Scan Models
@@ -82,7 +87,7 @@ runs:
       if: ${{ inputs.fail_on_detection || inputs.upload_to_hiddenlayer || inputs.output_file }}
       shell: bash
       run: |
-        scan_results=$(docker run --rm -e HL_LICENSE=$HL_LICENSE -e HL_CLIENT_ID=$HL_CLIENT_ID -e HL_CLIENT_SECRET=$HL_CLIENT_SECRET -v $MODEL_PATH:/files-to-scan $SCANNER_IMAGE:$SCANNER_VERSION --input /files-to-scan $UPLOAD_TO_HIDDENLAYER $MODEL_NAME $MODEL_VERSION)
+        scan_results=$(docker run --rm -e HL_LICENSE=$HL_LICENSE -e HL_CLIENT_ID=$HL_CLIENT_ID -e HL_CLIENT_SECRET=$HL_CLIENT_SECRET -v $MODEL_PATH:/files-to-scan $SCANNER_IMAGE:$SCANNER_VERSION --input /files-to-scan --output $OUTPUT_FILE $UPLOAD_TO_HIDDENLAYER $MODEL_NAME $MODEL_VERSION)
         { echo 'scan_results<<EOF'
           echo $scan_results
           echo EOF
@@ -135,7 +140,7 @@ runs:
       shell: bash
       if: ${{ inputs.fail_on_detection }}
       run: |
-        detections=$(echo '${{ steps.scan_models.outputs.scan_results }}' | jq '.detection_count')
+        detections=$(cat $OUTPUT_FILE | jq '.detection_count')
         if [ $detections -gt 0 ]; then
           echo "Detections found: $detections. Failing job."
           exit 1
