--- a/action.yaml
+++ b/action.yaml
@@ -84,7 +84,7 @@ runs:
       
     - name: Scan Models
       id: scan_models
-      if: ${{ inputs.fail_on_detection || inputs.upload_to_hiddenlayer || inputs.output_file }}
+      if: ${{ inputs.fail_on_detection  == 'true' || inputs.upload_to_hiddenlayer  == 'true' || inputs.output_file }}
       shell: bash
       run: |
         touch ${{ runner.temp }}/$OUTPUT_FILE
@@ -102,7 +102,7 @@ runs:
 
     - name: Scan Models (Sarif)
       id: scan_models_sarif
-      if: ${{ inputs.sarif_file || inputs.upload_to_github_security }}
+      if: ${{ inputs.sarif_file || inputs.upload_to_github_security  == 'true' }}
       shell: bash
       run: |
         sarif_results=$(docker run --rm -e HL_LICENSE=$HL_LICENSE -v $MODEL_PATH:/files-to-scan $SCANNER_IMAGE:$SCANNER_VERSION --input /files-to-scan --output-format=sarif)
@@ -118,12 +118,12 @@ runs:
 
     - name: Write SARIF Output
       shell: bash
-      if: ${{ inputs.sarif_file || inputs.upload_to_github_security }}
+      if: ${{ inputs.sarif_file || inputs.upload_to_github_security  == 'true' }}
       run: |
         echo '${{ steps.scan_models_sarif.outputs.sarif_results }}' > ${{ inputs.sarif_file || 'results.sarif'}}
 
     - name: Upload to Github Security
-      if: ${{ inputs.upload_to_github_security }}
+      if: ${{ inputs.upload_to_github_security  == 'true' }}
       uses: github/codeql-action/upload-sarif@v3
       with:
         # Path to SARIF file relative to the root of the repository
@@ -131,10 +131,22 @@ runs:
         # Optional category for the results
         # Used to differentiate multiple results for one commit
         category: hiddenlayer-model-scanner
+
+    - name: Show Scan (JSON)
+      shell: bash
+      if: ${{ inputs.fail_on_detection  == 'true' || inputs.upload_to_hiddenlayer  == 'true' || inputs.output_file }}
+      run: |
+        cat ${{ runner.temp }}/$OUTPUT_FILE
+
+    - name: Show Scan (SARIF)
+      shell: bash
+      if: ${{ inputs.sarif_file || inputs.upload_to_github_security == 'true' }}
+      run: |
+        cat ${{ inputs.sarif_file || 'results.sarif' }}
     
     - name: Fail Job if Detections
       shell: bash
-      if: ${{ inputs.fail_on_detection }}
+      if: ${{ inputs.fail_on_detection == 'true' }}
       run: |
         detections=$(cat ${{ runner.temp }}/$OUTPUT_FILE | jq '.detection_count')
         if [ $detections -gt 0 ]; then
