--- a/action.yaml
+++ b/action.yaml
@@ -126,7 +126,7 @@ runs:
       shell: bash
       if: ${{ inputs.fail_on_detection == 'true' }}
       run: |
-        detections=$(cat ${{ runner.temp }}/$OUTPUT_FILE | jq '.detection_count')
+        detections=$(cat $OUTPUT_FILE | jq '.detection_count')
         if [ $detections -gt 0 ]; then
           echo "Detections found: $detections. Failing job."
           exit 1
